--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,7 +24,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install wheel
         if [ -f requirements_actions.txt ]; then pip install -r requirements_actions.txt; fi
-        pip install .
+        pip install .[cmd]
     - name: Test with pytest
       run: |
         pytest --cov=threedi_settings --cov-report term-missing
