--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+git+https://github.com/nens/threedi-api-client.git
 aiohttp==3.7.4.post0
 appdirs==1.4.4
 async-timeout==3.0.1
@@ -14,7 +15,6 @@ PyJWT==2.0.1
 python-dateutil==2.8.1
 regex==2021.3.17
 six==1.15.0
-threedi-api-client==3.0.28
 toml==0.10.2
 typed-ast==1.4.2
 typer==0.3.2
